# personal-ai-os

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  personal-ai-os-spec.md  pyproject.toml
docs/: bash-automation-plan.md
pai_mcp/: __init__.py  github.py
pai_mcp/gmail/: __init__.py  server.py
src/pai/: __init__.py  __main__.py  cli.py  config.py  db.py  executor.py  gmail.py  intent.py  llm.py  mcp.py  models.py  watcher.py
tests/: test_executor.py  test_github_mcp.py  test_gmail.py  test_intent.py  test_models.py  test_watcher.py
